Bug 604864 - Optimize undefined, NaN and Infinity in methodjit.  r=dmandelin