js/src/jit-test/tests/jaeger/optimize-globals-3.js
@@ -1,0 +1,9 @@
+
+NaN = 4;
+undefined = 5;
+Infinity = 6;
+
+assertEq(isNaN(NaN), true);
+assertEq(Infinity > 100, true);
+assertEq(undefined != 5, true);
+
